[package]
name = "landing-time"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
serde = "1"
serde_json = "1"
serde_derive = "1"
dotenv = "0.13.0"
crypto-hash = "0.3.1"
hyperx = "0.13.1"
chrono = { version = "0.4.6", features = ["serde"] }
regex = "1.1.0"

[profile.release]
debug = true
